# CrypSplice2.0

./: .gitignore  CrypSplice2.0_modular.py  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
crypsplice/: __init__.py  cli.py  main.py
crypsplice/lib/: AddGenes.py  AnnotateJunctions.py  BatchCorrection.py  CrypticLoad.py  DifferentialUsage.py  ExtractJunctions.py  FilterJunctions.py  LogFile.py  PlotJunctions.py  RunBBTest.R  RunBatchCorrection.R  Setup.py  Utilities.py  Visualizations.py  __init__.py
lib/: AddGenes.py  AnnotateJunctions.py  CrypticLoad.py  DifferentialUsage.py  ExtractJunctions.py  FilterJunctions.py  LogFile.py  Setup.py
test_code/: run_CrypSplice.sh
test_code/Bams/: Control_1.CrypSplice.bam  Control_1.CrypSplice.bam.bai  Control_2.CrypSplice.bam  Control_2.CrypSplice.bam.bai  Rbm17_1.CrypSplice.bam  Rbm17_1.CrypSplice.bam.bai  Rbm17_2.CrypSplice.bam  Rbm17_2.CrypSplice.bam.bai  U2Surp_1.CrypSplice.bam  U2Surp_1.CrypSplice.bam.bai  U2Surp_2.CrypSplice.bam  U2Surp_2.CrypSplice.bam.bai
test_code/CrypticLoad_Test1/: CrypSplice.Annotated_JunctionCounts.txt  CrypSplice.CrypSplice.log.txt  CrypSplice.GeneLoad.txt  CrypSplice.JunctionCounts.txt  CrypSplice.SampleLoad.txt  CrypSplice.log.txt  Gene_ClusterMembership.txt  Hmatrix_Sample_ClusterMembership.txt  Sample_ClusterMembership.txt
test_code/CrypticLoad_Test2/: 2_CrypSplice.SampleLoad.txt  CrypSplice.Annotated_JunctionCounts.txt  CrypSplice.CrypSplice.log.txt  CrypSplice.GeneLoad.txt  CrypSplice.JunctionCounts.txt  CrypSplice.log.txt  Gene_ClusterMembership.txt  Hmatrix_Sample_ClusterMembership.txt  Sample_ClusterMembership.txt
(+13 files in other folders)
