[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypsplice"
version = "2.1.0"
description = "A robust computational tool designed to detect and analyze cryptic alternative splicing events from RNA-seq data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Michelle Dias", email = "michelledias10@gmail.com"}
]
keywords = ["bioinformatics", "RNA-seq", "alternative-splicing", "cryptic-splicing", "genomics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "pybedtools>=0.8.2",
    "scikit-learn>=1.1.0",
    "matplotlib>=3.5.0",
    "pyBigWig>=0.3.18",
    "pysam>=0.19.0"
]

[project.urls]
Homepage = "https://github.com/michelle-dias/CrypSplice2.0"
Repository = "https://github.com/michelle-dias/CrypSplice2.0"
Issues = "https://github.com/michelle-dias/CrypSplice2.0/issues"

[project.scripts]
crypsplice = "crypsplice.cli:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["crypsplice*"]